Tue Dec  2 15:30:30 2014  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* array.c (rb_ary_plus): in documentation, added note about
	  inefficiency of repeated += operations.

Tue Dec  2 07:20:21 2014  Eric Wong  <e@80x24.org>

	* iseq.c (iseq_data_to_ary): keep hidden variables
	  Thanks to wanabe [ruby-core:66566]

Tue Dec  2 06:46:57 2014  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych.rb: bumping version

	* ext/psych/psych.gemspec: ditto

Tue Dec  2 06:34:08 2014  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/to_ruby.rb: support objects that are
	  marshalable, but inherit from basic object.
	  Thanks Sean Griffin <sean@thoughtbot.com>

	* ext/psych/lib/psych/visitors/yaml_tree.rb: ditto

	* test/psych/test_marshalable.rb: test for fix

Tue Dec  2 06:32:02 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (ripper_flush_string_content): preserve the dispatched
	  results at tSTRING_CONTENT.  [ruby-dev:48714] [Bug #10437]

	* parse.y (regexp_contents): check in ripper only if the whole
	  content is a single regexp without interpolation.
	  [ruby-dev:48714] [Bug #10437]

Tue Dec  2 06:30:55 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* re.c (rb_reg_region_copy): new function to try with GC if copy
	  failed and return the error.

Tue Dec  2 04:43:08 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* re.c (CHECK_REGION_COPIED): onig_region_copy() can fail when
	  memory exhausted but returns nothing, so check by if allocated.

Tue Dec  2 02:53:00 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (magic_comment_encoding): enable in ripper, since the
	  encoding is necessary to parse non-default encoding scripts.

Tue Dec  2 02:30:25 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/generic.rb (URI::Generic.build):
	  use hostname= to detect and wrap IPv6 hosts.
	  Build is accepting URI components and users may not expect
	  that a host component needs to be wrapped with square brackets