@@ -1,3 +1,7 @@
+Tue Dec  2 21:33:56 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>
+
+	* ext/win32ole/win32ole.c: use typed data for com_hash.
+
 Tue Dec  2 15:30:30 2014  Martin Duerst  <duerst@it.aoyama.ac.jp>
 
 	* array.c (rb_ary_plus): in documentation, added note about
